--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,19 @@
 		<clobbers target="streamingMedia" />
 	</js-module>
 
+	<!-- browser -->
+	<platform name="browser">
+		<config-file target="config.xml" parent="/*">
+			<feature name="StreamingMedia">
+				<param name="browser-package" value="StreamingMedia" />
+			</feature>
+		</config-file>
+
+		<js-module src="src/browser/StreamingMediaProxy.js" name="StreamingMediaProxy">
+			<runs />
+		</js-module>
+	</platform>
+
 	<!-- ios -->
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
